Styles/markdown: Fix code block overflow issue
Add overflow-x:auto to blogPost <pre> tags as recommended in
rehype-pretty/rehype-pretty-code#147.

--- a/styles/global.css
+++ b/styles/global.css
@@ -76,6 +76,9 @@
 }
 
 .blogPost ul {
-  @apply list-disc;
-  @apply ps-10;
+  @apply list-disc ps-10;
+}
+
+.blogPost pre {
+  @apply overflow-x-auto rounded;
 }
